# event_driven_rabbitmq

./: info  pyproject.toml
src/: celery.py
src/config/: celery.py  settings.py
src/consumers/: base_consumer.py  historic_consumer.py  realtime_consumer.py  resource_consumer.py
src/errors/: errors.py
src/producers/: base_producer.py  producer.py
src/services/: base_transformer.py  request_service.py
